# samdisk

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  License.txt  ReadMe.md  SAMdisk.sln  SAMdisk.vcxproj  SAMdisk.vcxproj.filters  config.h.in  distclean.sh  samdisk.1
include/: BitBuffer.h  BitstreamDecoder.h  BitstreamEncoder.h  BitstreamTrackBuffer.h  BitstreamTrackBuilder.h  BlockDevice.h  CRC16.h  CrashDump.h  DemandDisk.h  DeviceHDD.h  Disk.h  DiskUtil.h  FdrawcmdSys.h  FluxDecoder.h  FluxTrackBuffer.h  FluxTrackBuilder.h  Format.h  HDD.h  HDFHDD.h  Header.h  IBMPC.h  Image.h  JupiterAce.h  KF_WinUsb.h  KF_libusb.h  KryoFlux.h  MemFile.h  Range.h  SAMCoupe.h  SAMdisk.h  SCP_FTD2XX.h  SCP_FTDI.h  SCP_USB.h  SCP_Win32.h  Sector.h  SpecialFormat.h  SpectrumPlus3.h  SuperCardPro.h  ThreadPool.h  Track.h  (+19 more)
src/: BitBuffer.cpp  BitstreamDecoder.cpp  BitstreamEncoder.cpp  BitstreamTrackBuffer.cpp  BitstreamTrackBuilder.cpp  BlockDevice.cpp  CRC16.cpp  CrashDump.cpp  DemandDisk.cpp  DeviceHDD.cpp  Disk.cpp  DiskUtil.cpp  Driver.cpp  FdrawcmdSys.cpp  FluxDecoder.cpp  FluxTrackBuffer.cpp  FluxTrackBuilder.cpp  Format.cpp  HDD.cpp  HDFHDD.cpp  Header.cpp  IBMPC.cpp  Image.cpp  JupiterAce.cpp  KF_WinUsb.cpp  KF_libusb.cpp  KryoFlux.cpp  MemFile.cpp  RCa06704  Range.cpp  SAMCoupe.cpp  SAMdisk.cpp  SAMdisk.rc  SCP_FTD2XX.cpp  SCP_FTDI.cpp  SCP_USB.cpp  SCP_Win32.cpp  Sector.cpp  SpecialFormat.cpp  SpectrumPlus3.cpp  (+25 more)
src/types/: 1dd.cpp  2d.cpp  a2r.cpp  adf.cpp  blk_dev.cpp  bpb.cpp  bpb.h  builtin.cpp  cfi.cpp  cpm.cpp  cqm.cpp  cwtool.cpp  d2m.cpp  d4m.cpp  d80.cpp  d81.cpp  d88.cpp  dfi.cpp  dmk.cpp  do.cpp  ds2.cpp  dsc.cpp  dsk.cpp  dti.cpp  fd.cpp  fdi.cpp  fdrawsys_ab_dev.cpp  fdrawsys_dev.cpp  hfe.cpp  imd.cpp  ipf.cpp  kf_dev.cpp  kf_stream.cpp  kryoflux.cpp  lif.cpp  mbd.cpp  mfi.cpp  mgt.cpp  msa.cpp  opd.cpp  (+19 more)
